# dfmesh

./: LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
src/dfmesh/: __init__.py  _helpers.py  _mesh.py  _mesh_tri.py  main.py
src/dfmesh/geometry/: ellipse.py  geometry.py
tests/: compare-speed.py  helpers.py  test_circle.py  test_closed_path.py  test_difference.py  test_ellipse.py  test_halfspace.py  test_intersection.py  test_large.py  test_pacman.py  test_path.py  test_polygon.py  test_quarter_annulus.py  test_rectangle.py  test_rectangle_hole.py  test_refinement_point_line.py  test_rotation.py  test_scaling.py  test_show_level_set.py  test_square_hole_refined.py  test_stretch.py  test_translation.py  test_union.py
