[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dfmesh"
authors = [{name = "Tom Gustafsson"}]
description = "Mesh generation using distance fields"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "scipy",
]

[project.optional-dependencies]
all = ["matplotlib"]

[project.urls]
Code = "https://github.com/kinnala/dfmesh"
Issues = "https://github.com/kinnala/dfmesh/issues"
